--- a/PandemobiumStockTrader/iOS/PandemobiumV2/MainStoryboard.storyboard
+++ b/PandemobiumStockTrader/iOS/PandemobiumV2/MainStoryboard.storyboard
@@ -539,7 +539,7 @@
                         <sections/>
                         <connections>
                             <outlet property="dataSource" destination="sfY-pE-IAe" id="wZM-as-0Nc"/>
-                            <outlet property="delegate" destination="sfY-pE-IAe" id="OqH-xs-lTx"/>
+                            <outlet property="delegate" destination="sfY-pE-IAe" id="ypF-AQ-rHL"/>
                         </connections>
                     </tableView>
                     <nil key="simulatedBottomBarMetrics"/>
@@ -594,7 +594,7 @@
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="XXXXX" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bzv-8K-4Eq">
-                                                    <rect key="frame" x="223" y="11" width="57" height="21"/>
+                                                    <rect key="frame" x="162" y="11" width="118" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -619,7 +619,7 @@
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="$xxx.xx" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="04t-ui-UDJ">
-                                                    <rect key="frame" x="223" y="11" width="57" height="21"/>
+                                                    <rect key="frame" x="161" y="11" width="119" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -644,7 +644,7 @@
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="$xxx.xx" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="x2j-I9-uie">
-                                                    <rect key="frame" x="223" y="11" width="57" height="21"/>
+                                                    <rect key="frame" x="162" y="11" width="118" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -734,6 +734,9 @@
                                                     <state key="highlighted">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="tradebuttonPressed:" destination="9hL-6b-zJl" eventType="touchUpInside" id="7AR-bX-BE0"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -1124,7 +1127,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HistoryViewController.h"/>
             <relationships>
                 <relationship kind="action" name="revealMenu:"/>
-                <relationship kind="outlet" name="history" candidateClass="NSMutableArray"/>
             </relationships>
         </class>
         <class className="InitialViewController" superclassName="ECSlidingViewController">
@@ -1132,9 +1134,6 @@
         </class>
         <class className="MenuViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MenuViewController.h"/>
-        </class>
-        <class className="NSMutableArray" superclassName="NSArray">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSMutableArray.h"/>
         </class>
         <class className="NewsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NewsViewController.h"/>
@@ -1186,7 +1185,6 @@
         <class className="SignInViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SignInViewController.h"/>
             <relationships>
-                <relationship kind="action" name="loginButtonPressed:" candidateClass="UIButton"/>
                 <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="outlet" name="passwordText" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="rememberloginSwitch" candidateClass="UISwitch"/>
@@ -1197,9 +1195,6 @@
         <class className="StockViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/StockViewController.h"/>
             <relationships>
-                <relationship kind="action" name="backButtonClicked:"/>
-                <relationship kind="action" name="favoriteButtonClicked:"/>
-                <relationship kind="action" name="tradingButtonClicked:"/>
                 <relationship kind="outlet" name="favoriteButton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
@@ -1233,6 +1228,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="t1z-o4-6xS"/>
-        <segue reference="JAp-Tl-bGE"/>
+        <segue reference="4bV-oS-hXi"/>
     </inferredMetricsTieBreakers>
 </document>
